# askui-runner

./: .dockerignore  .gitignore  .pdm-python  Dockerfile  README.md  mypy.ini  pyproject.toml  setup.py
.github/workflows/: docker-build-push.yml  publish.yaml
docker/: Dockerfile  build-push-docker.sh  entrypoint.sh
scripts/: generate_config_schema_json.py
src/askui_runner/: __main__.py  agent_app.py  config.py  logging.py
src/askui_runner/modules/agents/: config.py  containers.py  file_service.py  models.py
src/askui_runner/modules/core/: config.py  containers.py  models.py  runner.py
src/askui_runner/modules/core/application/: services.py
src/askui_runner/modules/core/domain/: services.py
src/askui_runner/modules/core/infrastructure/: askui.py
src/askui_runner/modules/core/infrastructure/agent/: agent_file_manager.py  agent_file_service.py
src/askui_runner/modules/core/infrastructure/files/: askui.py  files.py  retry_utils.py  s3.py  utils.py
src/askui_runner/modules/core/infrastructure/results_upload/: askui.py
src/askui_runner/modules/core/infrastructure/runner/: askui.py
src/askui_runner/modules/core/infrastructure/workflows_download/: askui.py
src/askui_runner/modules/queue/: containers.py  models.py  queue.py
src/askui_runner/modules/queue/application/: services.py
src/askui_runner/modules/queue/domain/: services.py
src/askui_runner/modules/queue/infrastructure/clock/: time.py
src/askui_runner/modules/queue/infrastructure/runner/: k8s_job.py  shared.py  subprocess.py
src/askui_runner/modules/queue/infrastructure/runner_jobs_queue/: askui.py
src/askui_runner/modules/queue/infrastructure/system/: sys.py
src/askui_runner/project_template/: jest.config.ts.jinja  package-lock.json  package.json  tsconfig.json
src/askui_runner/project_template/helper/: jest.setup.ts.jinja
tests/unit/modules/queue/infrastructure/runner/: test_k8s_job.py
