[project]
name = "askui-runner"
version = "0.2.4"
description = "Runner for Workflows Defined in AskUI Studio"
dependencies = [
    "dependency-injector>=4.44.0",
    "pydantic>=2.10.4",
    "jinja2>=3.1.4",
    "requests>=2.32.3",
    "tenacity>=9.0.0",
    "requests-toolbelt>=1.0.0",
    "pyyaml>=6.0.2",
    "typer[all]>=0.15.1",
    "kubernetes>=28.0.0",
    "pydantic-settings>=2.7.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "UNLICENSED"}

[tool.importlinter]
root_package = "runner"

[[tool.importlinter.contracts]]
name = "Layered app architecture"
type = "layers"
layers = [
    "runner.__main__",
    "runner.containers",
    "runner.config",
    "runner.modules.queue",
    "runner.modules.core",
]

[[tool.importlinter.contracts]]
name = "Layered module architecture (core)"
type = "layers"
layers = [
    "runner.modules.core.containers",
    "runner.modules.core.config",
    "runner.modules.core.application",
    "runner.modules.core.infrastructure",
    "runner.modules.core.domain",
    "runner.modules.core.models",
]

[[tool.importlinter.contracts]]
name = "Layered module architecture (jobs queue)"
type = "layers"
layers = [
    "runner.modules.queue.containers",
    "runner.modules.queue.application",
    "runner.modules.queue.infrastructure",
    "runner.modules.queue.domain",
    "runner.modules.queue.models",
]

[dependency-groups]
dev = [
    "import-linter>=2.1",
]
