[project]
name = "askui-runner"
version = "0.2.9"
description = "Runner for Workflows Defined in AskUI Studio"
dependencies = [
    "pydantic>=2.10.4",
    "jinja2>=3.1.4",
    "requests>=2.32.3",
    "tenacity>=9.0.0",
    "requests-toolbelt>=1.0.0",
    "pyyaml>=6.0.2",
    "typer[all]>=0.15.1",
    "kubernetes>=28.0.0",
    "pydantic-settings>=2.7.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "UNLICENSED" }

[tool.importlinter]
root_package = "askui_runner"

[[tool.importlinter.contracts]]
name = "Layered app architecture"
type = "layers"

layers = [
    "askui_runner.__main__",
    "askui_runner.config",
    "askui_runner.modules.queue",
    "askui_runner.modules.core",
]

[[tool.importlinter.contracts]]
name = "Layered module architecture (core)"
type = "layers"
layers = [
    "askui_runner.modules.core.containers",
    "askui_runner.modules.core.config",
    "askui_runner.modules.core.infrastructure",
    "askui_runner.modules.core.runner",
    "askui_runner.modules.core.models",
]

[[tool.importlinter.contracts]]
name = "Layered module architecture (jobs queue)"
type = "layers"
layers = [
    "askui_runner.modules.queue.containers",
    "askui_runner.modules.queue.infrastructure",
    "askui_runner.modules.queue.queue",
    "askui_runner.modules.queue.models",
]

[tool.pdm.scripts]
format = "ruff format --check src/"
"format:fix" = "ruff format src/"
typecheck = "mypy src/"
lint = "ruff check src/"
"lint:fix" = "ruff check --fix src/"
checks = { composite = [
    "format",
    "typecheck",
    "lint",
    "lint-imports",
] }
"checks:fix" = { composite = [
    "format:fix",
    "typecheck",
    "lint:fix",
    "lint-imports",
] }
runner = "python -m askui_runner -c config.yaml"

[dependency-groups]
dev = [
    "import-linter>=2.1",
    "ruff>=0.9.2",
    "mypy>=1.14.1",
    "types-requests>=2.32.0.20241016",
    "types-PyYAML>=6.0.12.20241230",
]
